fix side scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,17 +21,17 @@ body {
   color: black;
 }
 .row{
-  margin-bottom: 10x;
+  margin-bottom: 5x;
   
 }
 form {
-  padding-top: 10px;
+  padding-top: 5px;
   background-color: white !important;
 }
 /* height: calc(100% - 50px); */
 
 label{
-	margin-top: 10px;
+	margin-top: 5px;
 }
 
 /* Change btn to fill row */
@@ -91,7 +91,7 @@ label{
 table {
   color: white;
   background-color: rgba(0, 26, 175, 0.5);
-  margin-top: 2.5%;
+  margin-top: 15px;
   border-style: groove;
 }
 
@@ -178,7 +178,7 @@ body{
 	background: #000;
 	font-weight: 400;
 	font-size: 15px;
-	overflow-y: scroll;
+	overflow-y: hidden;
 	overflow-x: hidden;
 }
 .ie7 body{
